<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <PreferenceCategory android:title="@string/conf_comunicacao" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_visibilidade"
            android:summary="Visibilidade com Webserver"
            android:title="@string/conf_visivel" />

        <ListPreference
            android:entries="@array/list_time_sync"
            android:entryValues="@array/list_time_sync"
            android:key="pref_timesync"
            android:summary="Intervalo de Sincronização com Webservice"
            android:title="@string/conf_timesync" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/conf_contas" >               
        <EditTextPreference
            android:defaultValue="Campo Grande"
            android:key="pref_cidadeDefault"
            android:summary="Informe sua cidade"
            android:title="@string/conf_cidadeDefault" />
        
         <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_autoLogin"
            android:summary="Auto Login"
            android:title="@string/conf_autoLogin" />
    </PreferenceCategory>

</PreferenceScreen>