<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <!-- Header  Starts -->
        <!-- android:background="@layout/header_gradient" -->

 
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

         


           
  				<ImageView
  				    android:layout_width="match_parent"
  				    android:layout_height="wrap_content"
  				    android:layout_marginLeft="10dip"
  				    android:contentDescription="@string/todo"
  				    android:src="@drawable/ico_verde" />
            
           
        </LinearLayout>
       
        <!-- Header Ends -->
        <!-- Footer Start -->
        <!-- android:background="@layout/footer_repeat" -->

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >
        </LinearLayout>
        <!-- Footer Ends -->


        <!-- Login Form -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Email Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblEmail"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="text"
                android:singleLine="true" />

            <!-- Password Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@string/lblPassword"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/senha"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:inputType="textPassword"
                android:singleLine="true" />

            <!-- Login button -->

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:onClick="entrarOnClick"
                android:text="@string/btnLogin" />
            <!-- Link to Registration Screen -->

            <Button
                android:id="@+id/btnCreateAcount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnRegister" />
        </LinearLayout>
        <!-- Login Form Ends -->

    </RelativeLayout>

</ScrollView>